--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "sirv-cli": "^1.0.0"
-  }
+    "name": "hobby-project",
+    "version": "1.0.0",
+    "private": true,
+    "author": {
+        "name": "MaxQNEI",
+        "email": "maxqnei@gmail.com"
+    },
+    "scripts": {
+        "build": "rollup -c",
+        "dev": "rollup -c -w",
+        "start": "sirv public --no-clear",
+        "express": "nodemon --watch express express/index.js",
+        "socket": "nodemon --watch socket socket/index.js",
+        "mongo": "mongod --config mongo/mongod.conf"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
+        "rollup": "^2.3.4",
+        "rollup-plugin-css-only": "^3.1.0",
+        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-svelte": "^7.0.0",
+        "rollup-plugin-terser": "^7.0.0",
+        "svelte": "^3.0.0"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "mongodb": "^4.1.3",
+        "nodemon": "^2.0.14",
+        "sirv-cli": "^1.0.0",
+        "socket.io": "^4.3.1",
+        "socket.io-client": "^4.3.2"
+    }
 }
