--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "nodemon": "^2.0.14",
         "sirv-cli": "^1.0.0",
         "socket.io": "^4.3.1",
-        "socket.io-client": "^4.3.2"
+        "socket.io-client": "^4.3.2",
+        "uuidv4": "^6.2.12"
     }
 }
